Project builds with 2 submodules